# agent-test-verifier

./: .gitignore  README.md  action.yml  pyproject.toml
.github/workflows/: self-check.yml
demo/: conftest.py  test_planted.py
docs/superpowers/plans/: 2026-07-19-agent-test-verifier.md  2026-07-20-github-action.md
docs/superpowers/specs/: 2026-07-19-agent-test-verifier-design.md  2026-07-20-github-action-design.md
src/atv/: cli.py  context.py  diff.py  report.py
src/atv/detectors/: assertion_weakening.py  force_pass.py  null_test.py
tests/: test_assertion_weakening.py  test_cli.py  test_context.py  test_diff.py  test_force_pass.py  test_null_test.py  test_report.py  test_smoke.py
tests/fixtures/: benchjack_conftest.diff
