[project]
name = "agent-test-verifier"
version = "1.0.1"
description = "Detect when a coding agent fakes its passing signal (gamed tests/config)."
requires-python = ">=3.11"
dependencies = ["unidiff>=0.7.5"]
license = {text = "MIT"}

[project.scripts]
atv = "atv.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atv"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
